examples/test/testpolicy11998.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11998
  namespace: namespace345
spec:
  podSelector:
    matchLabels:
      key25: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value27
          key7: value19
          key39: value7
      podSelector:
        matchLabels:
          key25: value39
          key28: value9
          key34: value36
